I have made changes to the layout and still working on the side bar. The side bar works in  the .html file but can not work in the .js file.

--- a/react-multi-template-master/src/fund/Components/style.css
+++ b/react-multi-template-master/src/fund/Components/style.css
@@ -237,3 +237,13 @@ section.copy p {
 .google-map {
   padding-top: 60px;
 }
+
+
+.imgsize{
+  height: 40px;
+  width: 40px
+}
+
+.topPadding{
+  padding-top:63px;
+}
