--- a/react-multi-template-master/src/account/Components/account.html
+++ b/react-multi-template-master/src/account/Components/account.html
@@ -10,69 +10,22 @@
 </head>
 <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark"> <!--navbar-expand-lg 当尺寸大于lg尺寸时，才会显示navbar菜单-->
-        <div class="container">
-            <a href="homepage.html" class="navbar-brand">Company's name</a> <!--Website's title - 网站标题-->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-                Menu
-            </button>
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto"> <!--ul unorder list--> 
-                    <!--ms = margin start = margin left-->
-                    <li class="nav-item"><a href="investor.html" class="nav-link">Invest</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Fundraise</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Logout</a></li>
-                </ul>
-            </div>
-<!--
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-                  <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <p>
-                        hello
-                    </p>
-                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                      </a>
-                      <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                          <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </div>
--->
-
-            <!--
-            <div class="dropdown-lg">
-                <a class="btn btn-primary dropdown-toggle" role="button" id="loginButton" data-toggle="dropdown">
-                    Login
-                </a>
-                <div class="dropdown-menu" aria-labelledby="loginButton">
-                    <a href="#" class="dropdown-item">sign up</a>
-                    <a href="#" class="dropdown-item">sign in</a>
-                </div>
-            </div>
-            -->
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">Company's name</a>
+        <button class="navbar-toggler btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+          History
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body text-dark">
+            <p>heruhroijisgjoi</p>
+          </div>
         </div>
+      </div>
     </nav>
 
  
