--- a/react-multi-template-master/src/homepage/Components/homepage.html
+++ b/react-multi-template-master/src/homepage/Components/homepage.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Investor</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    
-</head>
-<body>
+  </head>
+  <body>
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark"> <!--navbar-expand-lg 当尺寸大于lg尺寸时，才会显示navbar菜单-->
-        <div class="container">
-            <a href="homepage.html" class="navbar-brand">Company's name</a> <!--Website's title - 网站标题-->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-                Menu
-            </button>
-            <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav ms-auto"> <!--ul unorder list--> 
-                    <!--ms = margin start = margin left-->
-                    <li class="nav-item"><a href="investor.html" class="nav-link">Invest</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Fundraise</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
-                    
-
-                </ul>
-            </div>
-            <!--
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+      <!--navbar-expand-lg 当尺寸大于lg尺寸时，才会显示navbar菜单-->
+      <div class="container">
+        <a href="homepage.html" class="navbar-brand">Company's name</a>
+        <!--Website's title - 网站标题-->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          Menu
+        </button>
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <!--ul unorder list-->
+            <!--ms = margin start = margin left-->
+            <li class="nav-item">
+              <a href="investor.html" class="nav-link">Invest</a>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link">Fundraise</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
+          </ul>
+        </div>
+        <!--
             <div class="dropdown-lg">
                 <a class="btn btn-primary dropdown-toggle" role="button" id="loginButton" data-toggle="dropdown">
                     Login
@@ -39,41 +51,51 @@
                 </div>
             </div>
             -->
-        </div>
+      </div>
     </nav>
     <!-- Logo Image-->
     <section class="text-center text-light">
-        <div class="section-bg" id="sectionbg">
-            <div class="container">
-                <div class="row">
-                    <div>
-                        <img src="./img/user.png" alt="logo" class="w-10">
-                    </div>
-                    <h3 class="my-1">Logo</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, rerum ex? Magni, nemo, nobis culpa asperiores nulla amet, repellendus placeat odit sit nisi excepturi delectus tempore tempora praesentium commodi. Minima.
-                    </p>
-                </div>
+      <div class="section-bg" id="sectionbg">
+        <div class="container">
+          <div class="row">
+            <div>
+              <img src="./img/user.png" alt="logo" class="w-10" />
             </div>
+            <h3 class="my-1">Logo</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Accusamus, rerum ex? Magni, nemo, nobis culpa asperiores nulla
+              amet, repellendus placeat odit sit nisi excepturi delectus tempore
+              tempora praesentium commodi. Minima.
+            </p>
+          </div>
         </div>
+      </div>
     </section>
 
     <!--invest or fund-->
     <section class="bg-dark text-center">
-        <div class="custom-section-2">
-            <div class="container">
-                <div class="row g-4">
-                    <div class="col">
-                        <button type="button" class="btn btn-secondary">I am an investor</button>
-                    </div>
-                    <div class="col">
-                        <button type="button" class="btn btn-secondary">I want to fund</button>
-                    </div>
-                </div>
+      <div class="custom-section-2">
+        <div class="container">
+          <div class="row g-4">
+            <div class="col">
+              <button type="button" class="btn btn-secondary">
+                I am an investor
+              </button>
             </div>
+            <div class="col">
+              <button type="button" class="btn btn-secondary">
+                I want fund
+              </button>
+            </div>
+          </div>
         </div>
-
+      </div>
     </section>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
